litmask/tests/compile/mask_rejects_concat_shim.stderr
error: mask! non-literal: accepts string, byte string, or C string literals
 --> tests/compile/mask_rejects_concat_shim.rs:8:27
  |
8 |     let _: String = mask!(concat!("a", "b", "c"));
  |                           ^^^^^^
